--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ project(":core") {
         api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
+        testImplementation('junit:junit:4.13')
         
     }
 }
