--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ project(":core") {
         compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
         compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
         compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
+        compile group: 'commons-codec', name: 'commons-codec', version: '1.15'
 
     }
 }
